--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -94,24 +94,40 @@
                           </div>
                         </details>
                         <details>
-                          <summary>Cara kerja skraping?</summary>
+                          <summary>Situs apa saja yang bisa di-scraping?</summary>
+                           <div>
+                             <p>Mengikis di sini berarti mengunduh banyak file sekaligus, bukan satu per satu. Ini semi-otomatis karena Anda masih terlibat untuk eksekusi. Agar pengikisan berfungsi, Anda harus memiliki tautan ke halaman daftar atau koleksi. Karenanya profil Instagram, atau beberapa halaman album musik yang didukung.</p>
+                             <ol>
+                               <li><b>Instagram.com</b></li>
+                               <li><b>FreeMusicArchive.org</b></li>
+                               <li><b>Musopen.org</b></li>
+                             </ol>
+                           </div>
+                        </details>
+                        <details>
+                          <summary>Bagaimana cara kerja Scraping?</summary>
                           <div>
-                            Ini versi sederhana, tidak terlalu hebat. Perlu campur tangan berhubung halaman dibikin dan hancurkan secara dinamis. <br>
+                            Itu bukan kikis (<em>scraping</em>) sungguhan. Butuh intervensi manual karena halaman dibangun secara dinamis dan dihancurkan di sisi klien.
+                            <br><b>Langkah-langkah untuk profil Instagram:</b> <br>
                             <ol>
-                              <li>Ramban laman sampai ke bawah guna mengumpulkan tautan, sampai mentok. Atau pijit terus <b>Skan ulang</b> buat percepat selancar.<br></li>
-                            <li>Pijit tombol Skrap, dan tunggu laba-laba beres bekerja.</li>
+                              <li>Pada halaman profil, gulir ke bagian bawah halaman untuk mulai mengumpulkan tautan. Atau terus tekan <b>Pindai Ulang</b> untuk menggulir otomatis hingga bagian bawah tercapai.</li>
+                              <li>Tekan tombol <b>Kikis</b>, dan tunggu laba-laba menyelesaikan tugasnya.</li>
                             </ol>
-                            <p>Gunakan dengan penuh tanggung jawab, bijaksana dan bijaksini.</p>
+                            <br><b>Langkah-langkah untuk album musik:</b> <br>
+                            <ol>
+                              <li>Pada halaman daftar album, tekan lama pada setiap judul album satu per satu. Scraping dilakukan per album, bukan beberapa album. Sebuah album dapat memiliki 1 atau 60+ lagu, biasanya musik klasik.</li>
+                              <li>Tekan unduh <strong>Semua</strong> saat diminta. Atau pilih satu atau beberapa sesuai kebutuhan.</li>
+                            </ol>
+                            Sekali lagi ini bukan coretan. Ini hanyalah cara mudah untuk mengunduh banyak file dengan satu klik. Gunakan dengan bijak dan bertanggung jawab.
                           </div>
                         </details>
                         <details>
                           <summary>Persyaratan skraping?</summary>
                           <div>
                             <ul>
-                              <li>Halaman profil berisi gambar kecil, bukan laman berisi gambar besar.<br></li>
+                              <li>Khusus Instagram, halaman profil berisi gambar kecil, bukan laman berisi gambar besar.<br></li>
                               <li>Koneksi internet kuat. Lelet jangan harap.<br></li>
-                              <li>Ruang penyimpanan besar (30gb+ amanya). Jika minim, bisa error kekurangan ruang. Jangan panik.
-                            Pijit <b>Abort</b>. Atur ruang, pindah dan hapus berkas. Ganti atau masukkan kartu memori kosong. Pastikan dipilih via tombol <b>Atur folder</b>.
+                              <li>Ruang penyimpanan besar (30gb+ amanya). Jika minim, bisa error kekurangan ruang. Jangan panik. Pijit <b>Abort</b>. Atur ruang, pindah ke laptop dan hapus berkas.
                             </li>
                             <li>Non-aktifkan <b>Optimasi batre</b> bila skraping. Skraping perlu waktu, and aplikasi bisa dimatikan oleh sistem karena makan waktu. <br><b>Cara</b>: 1. Buka Setelan sistem → Aplikasi.<br>2. Cari aplikasi ini (<b>VIPDownloader</b>). <br>3. Matikan <b>Optimasi batre</b>. Tiap perangkat beda cara menon-aktikan fitur ini, silakan buka manualnya.</li>
                             </ul>
@@ -135,7 +151,7 @@
                             </ul>
                           </div>
                         </details>
-                        <details>
+                        <!-- <details>
                           <summary>Apa guna <i>Atur berkas penyimpanan</i>?</summary>
                           <div>
                             Untuk mengorganisir foto dan video berdasarkan tema guna kenyamanan offline. Terutama untuk menyimpan data pada lokasi penyimpanan external yang bisa diganti/ pasang ulang demi ruang lebih besar daripada penyimpanan
@@ -147,7 +163,7 @@
                           <div>
                             Ya, tentu saja. Kalo penyimpanan SD card dicabut, aplikasi ini kehilangan referensi datanya. Memasangkan kembali SD card bisa membuat aplikasi berfungsi kembali.
                           </div>
-                        </details>
+                        </details> -->
                         <details>
                           <summary>Saya lupa PIN. Cara reset?</summary>
                           <div>
@@ -223,7 +239,7 @@
                         <details>
                           <summary>Saya unduh tapi gagal?</summary>
                           <div>
-                            <b>TODO</b>: Might happen at slow connection with large size. When broken, the app may fail to display it. Try deleting it via Delete button at gallery display. Or long press it at grid menu display to reveal the Delete button. Or re-download it beforehand if prompted. Be informed, for sensitive contents, the links are tokenized and can be expired in just seconds. Re-download using old links might break. Simply delete it, and re-download. Do not download during slow connection.
+                            <p>Mungkin terjadi pada koneksi lambat dengan ukuran besar. Saat rusak, aplikasi mungkin gagal menampilkannya. Coba hapus melalui tombol Hapus di tampilan galeri. Atau tekan lama pada tampilan menu kisi untuk membuka tombol Hapus. Atau unduh ulang sebelumnya jika diminta. Ketahuilah, untuk konten sensitif, tautannya diberi token dan dapat kedaluwarsa hanya dalam hitungan detik. Mengunduh ulang menggunakan tautan lama mungkin rusak. Cukup hapus, dan unduh ulang. Jangan mengunduh saat koneksi lambat.</p>
 
                           </div>
                         </details>
