--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -110,26 +110,41 @@
                               To avoid out of memory errors, images are cached and cropped to fit screen when being displayed. When being shared, the original large image is taken, instead. You can view original images at your preferred folders. Meaning no worries.
                           </div>
                         </details>
-
                         <details>
-                          <summary>How does Instagram scraping work?</summary>
+                          <summary>What sites can be scraped?</summary>
                           <div>
-                            It is not real scraping. Scraping word is used to simplify the wordings. It is more like download-multiple-files-once than regular scraping. Needs manual intervention due to the pages are dynamically built and destroyed client-side.
-                            <br><b>Steps:</b> <br>
+                            <p>Scraping here means downloading multiple files once rather than one at time. It is semi-automatic since you are still involved for executions. In order for scraping to work, you must have links to listing or collection pages. Hence Instagram profile, or a few supported music album pages.</p>
                             <ol>
-                              <li>Scroll to the bottom of the page to begin collecting links. Or keep hitting <b>Rescan</b> to auto-scroll till the bottom reached. </li>
+                              <li><b>Instagram.com</b></li>
+                              <li><b>FreeMusicArchive.org</b></li>
+                              <li><b>Musopen.org</b></li>
+                            </ol>
+                          </div>
+                        </details>
+                        <details>
+                          <summary>How does Scraping work?</summary>
+                          <div>
+                            It is not real scraping. Needs manual intervention due to the pages are dynamically built and destroyed client-side.
+                            <br><b>Steps for Instagram profiles:</b> <br>
+                            <ol>
+                              <li>At a profile page, scroll to the bottom of the page to begin collecting links. Or keep hitting <b>Rescan</b> to auto-scroll till the bottom reached. </li>
                               <li>Hit the <b>Scrape</b> button, and wait for the spider to finish its job.</li>
+                            </ol>
+                            <br><b>Steps for music albums:</b> <br>
+                            <ol>
+                              <li>At album listing pages, long press on each album title one at a time. Scraping is performed per album, not multiple albums. An album can have 1 or 60+ tracks or songs, normally music classic ones.</li>
+                              <li>Hit download <strong>All</strong> when prompted. Or choose one or a few as needed.</li>
                             </ol>
                             Again this is not scraping. It is just a convenient way to download multiple files at one click. Use it wisely and responsibly.
                           </div>
                         </details>
                         <details>
-                          <summary>Instagram scraping requirements?</summary>
+                          <summary>Scraping requirements?</summary>
                           <div>
                             <ul>
-                              <li>Currently only works for profile pages with small thumbnails, not those with large images. Although scraping /tags, /explore, or practically any pages is doable, this feature is postponed till enough requests.</li>
+                              <li>Specific for Instagram, currently only works for profile pages with small thumbnails, not those with large images. Although scraping /tags, /explore, or practically any pages is doable, this feature is postponed till enough requests.</li>
                               <li>Strong internet connection. Do not scrape at slow connection!</li>
-                              <li>Large size of device external storage (30gb+ to play nice), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space, move or delete files. Switch or plug in a new empty card. Be sure to select it via <b>Organize directories</b>.</li>
+                              <li>Large size of device external storage (30gb+ to play nice), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space, move to laptop or delete files.</li>
                               <li><b>FREE</b> version: some minimum points</li>
                               <li>Scraping requires time, be sure to disable <b>Battery Optimization</b> for this app, otherwise killed by the system. <br><b>Steps</b>:<br>1. Open System Settings → Application/ Apps.<br> 2. Find this app (<b>VIPDownloader</b>). <br> 3. Disable <b>Battery Optimization</b>. Some devices may have different way to disable it.</li>
                             </ul>
@@ -140,7 +155,6 @@
                           <summary>Can I navigate away while scraping?</summary>
                           <div>
                             Yes, as long as the app web interface displaying Instagram is opened. Scraping is run at another thread. Not your main UI thread. But that means you are doing several things simultaneously which immediately smells like human bot behaviors. Staying tuned till all downloads are finished is recommended unless you provide different accounts via <b>Settings > Private mode</b>.
-
                           </div>
                         </details>
                         <details>
@@ -168,10 +182,9 @@
                           <summary>Why scraping not work?</summary>
                           <div>
                             Only applicable to FREE version. Before scraping you will be presented a video ad. A minimum countdown threshold and some points are required before you close it. If you close it too early, scraping is not started or triggered.
-
                           </div>
                         </details>
-                        <details>
+                        <!-- <details>
                           <summary>What is <i>Organize directories</i> for?</summary>
                           <div>
                             To organize your photos or videos thematically for offline convenience. You can put wild life media into <b>Wildlife</b> folder, food and beverages into <b>Cooking</b>, etc. Above all, you can put them all into an external removable disk for greater storage rooms rather than being stored internally.
@@ -183,7 +196,7 @@
                             Yes, of course. If you chose a removable SD card for storage, then removed/ plugged out, the app has no way to fetch its stored data. Unless you have multiple slots. Plugging it back in should make the app functional
                             again.
                           </div>
-                        </details>
+                        </details> -->
                         <details>
                           <summary>I forgot my PIN. How to reset?</summary>
                           <div>
