--- a/project/vipinstagram/howto/id/index.html
+++ b/project/vipinstagram/howto/id/index.html
@@ -41,7 +41,26 @@
                     </header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-
+                        <details open>
+                          <summary>Peramban, atau Aplikasi?</summary>
+                          <div>
+                            <p>Aplikasi VIP Downloader mendukung pengunduhan dari peramban (browser) internal atau eksternal, atau aplikasi resmi. Gunakan Aplikasi karena beberapa alasan: keberadaan web yang buruk atau tidak dapat digunakan seperti SnackVideo, atau untuk menghindari pemblokiran seperti oleh Instagram. Gunakan Browser untuk unduhan sekali klik yang nyaman, atau skrap namun Browser ini dapat berisiko Anda terkena pemblokiran akun, berhati-hatilah! Jangan gunakan Browser kecuali mereka tidak memiliki aplikasi resmi atau Anda tahu apa yang Anda lakukan.</p>
+                            <ol>
+                              <li><b>Dukungan Web Internal</b>:
+                                <ul>
+                                  <li>Tekan lama pada <b>JUDUL</b> atau <b>FOTO</b> untuk mengunduh.</li>
+                                  <li>Atau bahkan mengetuk <b>SUKA</b> atau <b>BOOKMARK</b> untuk mengunduh otomatis.</li>
+                                  <li>Skrap profil Instagram, skrap situs web musik seperti Jamendo, Arsip Musik Gratis, Musopen.</li>
+                                </ul>
+                              <li><b>Aplikasi, atau browser eksternal</b>:
+                                <ul>
+                                  <li>Hanya mendukung pengunduhan melalui Bagikan dan Salin tautan.</li>
+                                  <li>Skrap tidak mungkin, tidak didukung.</li>
+                                </ul>
+                            </ol>
+                            <p>Memijit tombol Aplikasi wajib guna sinkronisasi and mengaktifkan servis pemantau agar bisa mengunduh langsung saat Salin tautan dipilih. Peramban bawaan, peramban yang disertakan dengan aplikasi, adalah peramban yang sangat minim seperti halnya Twitter Lite, TikTok Lite, Facebook Like, dll. hanya jauh lebih tidak canggih. Lagi! Jangan gunakan Browser bawaan kecuali mereka tidak memiliki aplikasi resmi, atau Anda tahu apa yang Anda lakukan. Karena sangat minim, bahkan tidak menggunakannya untuk mendaftar akun juga. Gunakan untuk masuk dan mengunduh sebagai gantinya. Silakan baca detailnya di bagian FAQ.</p>
+                          </div>
+                        </details>
                         <details>
                           <summary>Instagram</summary>
                           <div>
@@ -60,7 +79,7 @@
                               <li>Atau tekan <b>Bagikan tautan</b>, dan temukan ikon <b>Pengunduh VIP</b>.</li>
                             </ol>
                             <p>Informasi! Pengikisan (<em>scraping</em>) memerlukan Opsi A. Opsi B dan pengikisan mungkin mengharuskan Anda memberikan kredensial tiruan melalui <b>Setelan > Akun</b> karena pembatasan. Opsi B dapat memicu peringatan email <b>Login baru</b> yang mengganggu karena sesi yang kurang persisten. Silakan gunakan internal (opsi A) untuk kenyamanan terlepas dari keterbatasannya -- karena merupakan aplikasi web, bukan aplikasi asli. Prinsip yang sama kemungkinan berlaku untuk situs lain yang didukung, kecuali dinyatakan lain.</p>
-                            <img src="../instagram-small.jpg"  srcset="../instagram-medium.jpg 640w, ../instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
                         </details>
@@ -80,7 +99,7 @@
                              </ol>
 
                              <p>Informasi! Beberapa ISP seperti di Indonesia memblokir Reddit, Vimeo, dll. Gunakan VPN, proxy, dll., atau tetap aman. Hanya berfungsi untuk pos yang berdiri sendiri, bukan yang disematkan di dalam pos lain. Cukup kunjungi pos aslinya untuk mengunduh, jika masalah masih ada.</p>
-                          <img src="../reddit-small.jpg"  srcset="../reddit-medium.jpg 640w, ../reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/reddit-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/reddit-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
 
                           </div>
                         </details>
@@ -100,7 +119,7 @@
                             </ol>
                             <p>Informasi! Tidak seperti gambar biasa, atau situs video lainnya, menekan lama pada pratinjau gambar video Twitter tidak akan berfungsi. Hanya berfungsi untuk tweet yang berdiri sendiri, bukan tweet yang disematkan di dalam tweet lain, yang diidentifikasi dengan kotak/kartu berbatas. Kunjungi saja tweet aslinya untuk mengunduh. Gambar yang mengarah ke situs eksternal, diidentifikasi oleh <b>https://t.co/...</b> url, belum dihosting secara internal di Twitter, belum didukung.</p>
 
-                          <img src="../twitter-small.jpg"  srcset="../twitter-medium.jpg 640w, ../twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
 
                           </div>
                         </details>
@@ -121,7 +140,7 @@
                             </ol>
                             <p>Informasi! Antarmuka web tidak memiliki fitur pencarian dan daftar. Namun Anda dapat mencari <b>nama pengguna</b> menggunakan pencarian internal yang disediakan oleh aplikasi ini di sudut kanan atas. Anda juga dapat mengunduh video langsung dari aplikasi TikTok atau aplikasi serupa. Satu-satunya perbedaan adalah ukurannya yang sedikit lebih besar, tanpa tanda air, dan organisasi yang terintegrasi dengan penyedia video lain jika menggunakan aplikasi ini. Dan tidak ada watermak untuk TikTok dan Suka. Untuk SnackVideo, gunakan <b>Salin tautan</b> melalui aplikasi mereka karena tidak memiliki situs web yang dapat digunakan.</p>
 
-                          <img src="../tiktok-small.jpg"  srcset="../tiktok-medium.jpg 640w, ../tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
                           </div>
                         </details>
@@ -132,7 +151,7 @@
                              <ol>
                                <li>Tekan lama pada <b>JUDUL</b> lagu. Bukan gambar mini, bukan ikon (ikon unduhan, dll.), bukan judul di halaman penuh.</li>
                              </ol>
-                             <img src="../jamendo-small.jpg" srcset="../jamendo-medium.jpg 640w, ../jamendo-large.jpg 1024w" alt="How to download Jamendo images easily with Android" />
+                             <img src="https://gausarts.github.io/project/vipinstagram/howto/jamendo-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/jamendo-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/jamendo-large.jpg 1024w" alt="How to download Jamendo images easily with Android" />
                           </div>
                         </details>
                         <details>
@@ -143,7 +162,7 @@
                                <li>Atau tekan lama pada tautan <b>UNDUH</b>, bukan panah ke bawah.</li>
                             </ol>
 
-                            <img src="../unsplash-small.jpg" srcset="../unsplash-medium.jpg 640w, ../unsplash-large.jpg 1024w" alt="How to download Unsplash images easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/unsplash-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/unsplash-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/unsplash-large.jpg 1024w" alt="How to download Unsplash images easily with Android" />
 
                           </div>
                         </details>
@@ -162,8 +181,20 @@
                              </ol>
                              <p>Informasi! Beberapa ISP seperti di Indonesia memblokir Reddit, Vimeo, dll. Gunakan VPN, proxy, dll., atau tetap aman.</p>
 
-                          <img src="../vimeo-small.jpg"  srcset="../vimeo-medium.jpg 640w, ../vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
+                          <img src="https://gausarts.github.io/project/vipinstagram/howto/vimeo-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/vimeo-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Situs apa saja yang bisa di-scraping?</summary>
+                          <div>
+                            <p>Mengikis (<em>scraping</em>) di sini berarti mengunduh banyak file sekaligus, bukan satu per satu. Ini semi-otomatis karena Anda masih terlibat untuk eksekusi. Agar pengikisan berfungsi, Anda harus memiliki tautan ke halaman koleksi. Dalam hal sini berarti profil Instagram, atau beberapa halaman album musik yang didukung.</p>
+                            <ol>
+                              <li><b>Instagram.com</b>: Pada halaman profil, gulir ke bawah. Tekan tombol Kikis (<em>Scrape</em>) saat muncul.</li>
+                              <li><b>FreeMusicArchive.org</b>.</li>
+                              <li><b>Musopen.org</b>.</li>
+                            </ol>
+                            <p>Khusus untuk halaman musik: Pada halaman daftar album, tekan lama pada setiap judul album, satu per satu sehabis unduhan selesai. Scraping dilakukan per album, bukan beberapa album. Sebuah album, biasanya musik klasik, dapat memiliki 1 auto 60+ trek atau lagu. Tekan Unduh Semua saat diminta.</p>
                           </div>
                         </details>
                         <details>
