--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -41,7 +41,26 @@
                     </header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
-
+                        <details open>
+                          <summary>Browser, or App?</summary>
+                          <div>
+                            <p>The VIP Downloader app supports downloading from either internal, or external browsers, or official apps. Use App for a few reasons: poor to no usable web presense such as SnackVideo alike, or to avoid being blocked such as by Instagram. Use Browser for convenient once-click downloads, or scraping however this Browser may risk you subject to ban, be warned! Don't use Browser unless they don't have official apps or you know what you are doing.</p>
+                            <ol>
+                              <li><b>Internal Web supports</b>:
+                                <ul>
+                                  <li>Long press on <b>TITLES</b> or <b>PICTURES</b> to download.</li>
+                                  <li>Or even tapping <b>LIKE</b> or <b>BOOKMARK</b> to auto-download.</li>
+                                  <li>Scraping Instagram profiles, scraping music websites like Jamendo, Free Music Archive, Musopen.</li>
+                                </ul>
+                              <li><b>App, or external browsers</b>:
+                                <ul>
+                                  <li>Only supports downloading via Share and Copy link.</li>
+                                  <li>No scraping are supported.</li>
+                                </ul>
+                            </ol>
+                            <p>Hitting App button is always required to sync and activate the listener service so that this app can listen to Copy link when hit to download. The built-in Browser, the browsewr shipped with the app, is a very minimal browser like Twitter Lite, TikTok Lite, Facebook Like, etc. only a lot less sophisticated. Again! Do not use built-in Browser unless they don't have official apps, or you know what you are doing. Due to being very minimal, do not even use it to register accounts, either. USe it to log in and download instead. Please read details on FAQs section.</p>
+                          </div>
+                        </details>
                         <details>
                           <summary>Instagram</summary>
                           <div>
@@ -62,7 +81,7 @@
                             <p>Be informed! Scraping requires Option A. Option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email
                               warnings due to being less persistent sessions. Please use the internal (option A) for convenience regardless its limitations -- due to being web app, not native app. The same principle likely applies to other supported
                               sites, unless otherwise stated.</p>
-                            <img src="instagram-small.jpg" srcset="instagram-medium.jpg 640w, instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
                         </details>
@@ -82,7 +101,7 @@
                             </ol>
 
                             <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, proxies, etc., or stay safe. Only works for a stand-alone post, not the one embedded inside another post. Just visit its original post to download, if the issue still stands.</p>
-                            <img src="reddit-small.jpg" srcset="reddit-medium.jpg 640w, reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/reddit-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/reddit-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
 
                           </div>
                         </details>
@@ -103,7 +122,7 @@
                             <p>Be informed! Unlike plain images, or other video sites, long pressing on Twitter video image previews will not work. Only works for a stand-alone tweet, not the one embedded inside another tweet, identified by a
                               bordered box/ card. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported, yet.</p>
 
-                            <img src="twitter-small.jpg" srcset="twitter-medium.jpg 640w, twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
 
                           </div>
                         </details>
@@ -126,7 +145,7 @@
                               from TikTok app or its similar apps. The only differences are slightly larger size, no watermark, and integrated organizations with other video providers if using this app. And no watermak for TikTok and Like. For
                               SnackVideo, please use the <b>Copy link</b> via their apps as it has no usable website.</p>
 
-                            <img src="tiktok-small.jpg" srcset="tiktok-medium.jpg 640w, tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
                           </div>
                         </details>
@@ -138,7 +157,7 @@
                               <li>Long press on a song <b>TITLE</b>. Not thumbnails, not icons (download icon, etc.), nor titles at full pages.</li>
                             </ol>
 
-                            <img src="jamendo-small.jpg" srcset="jamendo-medium.jpg 640w, jamendo-large.jpg 1024w" alt="How to download Jamendo images easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/jamendo-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/jamendo-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/jamendo-large.jpg 1024w" alt="How to download Jamendo images easily with Android" />
                           </div>
                         </details>
                         <details>
@@ -149,7 +168,7 @@
                               <li>Or long press on <b>DOWNLOAD</b> link, not the arrow down.</li>
                             </ol>
 
-                            <img src="unsplash-small.jpg" srcset="unsplash-medium.jpg 640w, unsplash-large.jpg 1024w" alt="How to download Unsplash images easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/unsplash-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/unsplash-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/unsplash-large.jpg 1024w" alt="How to download Unsplash images easily with Android" />
 
                           </div>
                         </details>
@@ -168,7 +187,7 @@
                             </ol>
                             <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, proxies, etc., or stay safe.</p>
 
-                            <img src="vimeo-small.jpg" srcset="vimeo-medium.jpg 640w, vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
+                            <img src="https://gausarts.github.io/project/vipinstagram/howto/vimeo-small.jpg" srcset="https://gausarts.github.io/project/vipinstagram/howto/vimeo-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
                           </div>
                         </details>
@@ -191,6 +210,18 @@
                               <li>to fetch the latest feeds or posts.</li>
                               <li>if pages are blank due to failed connection, etc.</li>
                             </ul>
+                          </div>
+                        </details>
+                        <details>
+                          <summary>What sites can be scraped?</summary>
+                          <div>
+                            <p>Scraping here means downloading multiple files once rather than one at time. It is semi-automatic since you are still involved for executions. In order for scraping to work, you must have links to listing or collection pages. Hence Instagram profile, or a few supported music album pages.</p>
+                            <ol>
+                              <li><b>Instagram.com</b>, profiles: At a profile page, scroll to bottom. Hit Scrape button when prompted.</li>
+                              <li><b>FreeMusicArchive.org</b>.</li>
+                              <li><b>Musopen.org</b>.</li>
+                            </ol>
+                            <p>Specific for music pages: At album listing pages, long press on each album title one at a time. Scraping is performed per album, not multiple albums. An album, normally music classic ones, can have 1 or 60+ tracks or songs. Hit Download All when prompted.</p>
                           </div>
                         </details>
                         <details>
